--- a/managementView/web/src/app/tables/tables.component.html
+++ b/managementView/web/src/app/tables/tables.component.html
@@ -13,18 +13,21 @@
             <td>{{table.id}}</td>
             <td>{{table.location}}</td>
             <td>{{table.seats}}</td>
-            <td><a href="" uk-icon="icon: image"></a></td>
+            <td><button uk-icon="icon: print" (click)="onPrintQRCode(table)"></button></td>
             <td>
-                <a href="" uk-icon="icon: pencil"></a>
-                <a href="" uk-icon="icon: trash"></a>
+                <button uk-icon="icon: pencil" (click)="onEdit(table)"></button>
+                <button uk-icon="icon: trash" (click)="onDelete(table)"></button>
             </td>
         </tr>
     </tbody>
 </table>
 <form #tablePost="ngForm" (ngSubmit)="onSubmit(tablePost.value)">
+    <span class="uk-label">id:</span>
+    <input class="uk-input" type="number" name="id" [(ngModel)]="id" readonly>
     <span class="uk-label">location:</span>
-    <input class="uk-input" name="location" ngModel placeholder="outside">
+    <input class="uk-input" name="location" [(ngModel)]="location" placeholder="outside">
     <span class="uk-label">Number of Seats:</span>
-    <input class="uk-input" type="number" name="seats" ngModel placeholder="20">
+    <input class="uk-input" type="number" name="seats" [(ngModel)]="seats" placeholder="20">
+    <input class="uk-input" type="reset">
     <input class="uk-input" type="submit">
 </form>
