--- a/managementView/web/src/app/app.component.html
+++ b/managementView/web/src/app/app.component.html
@@ -4,7 +4,7 @@
       <ul class="uk-navbar-nav">
           <li><a routerLink="">Login</a></li>
           <li><a routerLink="/tables">Tables</a></li>
-          <li><a href="#">Users</a></li>
+          <li><a href="/users">Users</a></li>
           <li><a href="#">Menu-Items</a></li>
           <li><a href="#">Categories</a></li>
       </ul>
