--- a/managementView/web/src/app/app.component.html
+++ b/managementView/web/src/app/app.component.html
@@ -7,6 +7,7 @@
           <li><a href="/users">Users</a></li>
           <li><a href="#">Menu-Items</a></li>
           <li><a href="#">Categories</a></li>
+          <li><a uk-icon="icon: sign-out" (click)="onSignout()"></a></li>
       </ul>
   </div>
 </nav>
