finish categories and menu-items

--- a/managementView/web/src/app/app.component.html
+++ b/managementView/web/src/app/app.component.html
@@ -5,8 +5,8 @@
           <li><a routerLink="">Login</a></li>
           <li><a routerLink="/tables">Tables</a></li>
           <li><a href="#">Users</a></li>
-          <li><a href="#">Menu-Items</a></li>
-          <li><a href="#">Categories</a></li>
+          <li><a href="/menuItems">Menu-Items</a></li>
+          <li><a href="/categories">Categories</a></li>
       </ul>
   </div>
 </nav>
